z-index fix

--- a/src/app/content-blocks/block-event-info/block-event-info.component.scss
+++ b/src/app/content-blocks/block-event-info/block-event-info.component.scss
@@ -3,6 +3,7 @@
 :host {
   @include component;
   @include page-width;
+  z-index: 1;
 }
 
 .logo {
